--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -9,7 +9,7 @@ layout: default
       {% for person in site.data.people %}
       <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
         <div class="card h-100">
-            <img src="{{ 'http://localhost:4000' | append: person.image }}" class="card-img-top img-fluid" alt="{{ person.name }}" />
+            <img src="{{ site.url | append: person.image }}" class="card-img-top img-fluid" alt="{{ person.name }}" />
             <div class="card-body">
               <h5 class="card-title" style="font-size: smaller;">
                 <a href="{{ person.link }}">{{ person.name }}</a>
