--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -8,15 +8,15 @@ layout: page
     <div class="row">
       {% for person in site.data.people %}
       <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-        <div class="card h-100">
+        <div class="card h-100 d-flex flex-column">
             <img src="{{ site.url | append: person.image }}" class="card-img-top img-fluid" alt="{{ person.name }}" />
-            <div class="card-body">
-              <h5 class="card-title" style="font-size: smaller;">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <h5 class="card-title" style="font-size: smaller; margin-bottom: 0;">
                 <a href="{{ person.link }}">{{ person.name }}</a>
               </h5>
-              <p class="card-text" style="font-size: smaller;">{{ person.role }}</p>
-              <p class="card-text" style="font-size: smaller;">{{ person.university }}</p>
-              <p class="card-text" style="font-size: smaller;"><a href="mailto:{{ person.email }}">{{ person.email }}</a></p>
+              <p class="card-text" style="font-size: smaller; margin-bottom: 0;">{{ person.role }}</p>
+              <p class="card-text" style="font-size: smaller; margin-bottom: 0;">{{ person.university }}</p>
+              <p class="card-text" style="font-size: smaller; margin-bottom: 0;"><a href="mailto:{{ person.email }}">{{ person.email }}</a></p>
             </div>
           </div>
         </div>
