--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -20,7 +20,7 @@ layout: page
             </div>
           </div>
         </div>
-        {% cycle '', '', '', '</div><div class="row">' %} <!-- This line will ensure that after every 4th card, a new row is started -->
+        {% cycle '', '', '</div><div class="row">' %} <!-- This line will ensure that after every 3rd card, a new row is started -->
       {% endfor %}
     </div>
   </main>
