--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -12,7 +12,8 @@ layout: page
             <img src="{{ site.url | append: site.baseurl | append: person.image }}" class="card-img-top img-fluid" alt="{{ person.name }}" />
             <div class="card-body d-flex flex-column justify-content-between">
               <h5 class="card-title" style="font-size: smaller; margin-bottom: 0;">
-                <a href="{{ person.link }}">{{ person.name }}</a>
+                <!-- <a href="{{ person.link }}">{{ person.name }}</a> -->
+                {{ person.name }}
               </h5>
               <p class="card-text" style="font-size: smaller; margin-bottom: 0;">{{ person.role }}</p>
               <p class="card-text" style="font-size: smaller; margin-bottom: 0;">{{ person.university }}</p>
