--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -47,6 +47,15 @@
       {% endfor %}
     </ul>
   </nav>
+{% if page.show_tabs %}
+  <!-- Code to display tabs -->
+  <div class="sidebar-tabs">
+    <ul>
+      <li><a href="#tab1">Tab 1</a></li>
+      <li><a href="#tab2">Tab 2</a></li>
+    </ul>
+  </div>
+{% endif %}
 
   <div class="sidebar-bottom d-flex flex-wrap  align-items-center w-100">
     {% unless site.theme_mode %}
