--- a/_sass/layout/home.scss
+++ b/_sass/layout/home.scss
@@ -14,7 +14,10 @@
       margin-bottom: 1.25rem;
     }
   }
-
+  .logo-img {
+    width: 200px; /* Adjust the width as needed */
+    height: auto; /* Maintains aspect ratio */
+  }
   .card {
     border: 0;
     background: none;
@@ -187,3 +190,4 @@
     }
   } /* .pagination */
 }
+
